fix spacing around hamburger on small devices

--- a/src/components/layout/header.module.css
+++ b/src/components/layout/header.module.css
@@ -228,6 +228,12 @@
   width: 18.75em;
 }
 
+@media screen and (max-width: 400px) {
+  .brandingImage {
+    width: 15.75em;
+  }
+}
+
 @media screen and (min-width: 50em) {
   .brandingImage {
     width: 25em;
